# bluechips

./: flake.nix
.idx/: dev.nix
bluechips-rs/: .gitignore  Cargo.toml  default.nix  public
bluechips-rs/migration/: Cargo.toml
bluechips-rs/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240221_044438_auth_session.rs
bluechips-rs/src/: main.rs
bluechips-rs/src/auth/: db_session.rs  mod.rs  session.rs
bluechips-rs/src/entities/: auth_session.rs  currency.rs  expenditure.rs  mod.rs  prelude.rs  split.rs  subitem.rs  transfer.rs  user.rs
bluechips-rs/src/service/: mutation.rs  query.rs
bluechips-rs/templates/: _list.html  _list_expenditures.html  base.html
bluechips-rs/templates/auth/: login.html
bluechips-rs/templates/history/: index.html
bluechips-rs/templates/spend/: delete.html  index.html
bluechips-rs/templates/status/: index.html
bluechips-rs/templates/transfer/: delete.html  index.html
bluechips/controllers/: spend.py  transfer.py
bluechips/lib/: helpers.py
bluechips/public/css/: main.css
bluechips/public/js/: calculator.js
