[package]
name = "bluechips-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-rocket"] }
askama_rocket = "0.12.0"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rusty-money = "0.4.1"
sea-orm = { version = "0.12.1", features = ["sqlx-mysql", "sqlx-sqlite", "runtime-tokio-native-tls"] }

[profile.dev.package.askama_derive]
opt-level = 3

[patch.crates-io]
# Not on crates.io for some reason?
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "0.12.0" }
askama = { git = "https://github.com/djc/askama.git", rev = "0.12.0" }
